# boson-rs

./: Cargo.toml  Dockerfile  README.md  architecture.md  benchmarks.md
.github/workflows/: ci.yml
src/: cmd.rs  codec.rs  exec.rs  handler.rs  lib.rs  main.rs  server.rs  store.rs
tests/: integration.rs  prop_codec.rs
