[package]
name = "boson-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
dashmap = "6.2.1"
itoa = "1.0.18"
prometheus = { version = "0.14.0", features = ["process"] }
proptest = { version = "1.11.0", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
